--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,11 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.opengles_exemplo"
+        applicationId "com.unesp.calibracao_haori"
         minSdkVersion 28
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -30,24 +28,20 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'org.jetbrains:annotations:20.1.0'
+    // Básico
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'org.jetbrains:annotations:21.0.1'
 
     // Permissões
-    implementation 'androidx.activity:activity:1.2.3'
-    implementation 'androidx.fragment:fragment:1.3.3'
+    implementation 'androidx.activity:activity:1.3.1'
+    implementation 'androidx.fragment:fragment:1.3.6'
 
     // CameraX
-    def camerax_version = "1.1.0-alpha04"
+    def camerax_version = "1.1.0-alpha07"
 
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
-    implementation "androidx.camera:camera-view:1.0.0-alpha24"
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "androidx.camera:camera-view:1.0.0-alpha27"
 }
