--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
-
+    
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    
     <application
         android:allowBackup="true"
         android:fullBackupOnly="true"
